--- a/index.html
+++ b/index.html
@@ -38,53 +38,25 @@
             </section>
         </main>
 
-        <aside class="sidebar">
-            <div class="hiring-links">
-                <h2>Career Opportunities</h2>
-                <ul>
-                    <li><a href="https://hng.tech/hire/ui-developers" target="_blank">Hire UI Developers</a></li>
-                    <li><a href="https://hng.tech/hire/javascript-developers" target="_blank">JS Developers Jobs</a></li>
-                    <li><a href="https://hng.tech/hire/angular-developers" target="_blank">Angular Devs</a></li>
-                    <li><a href="https://hng.tech/hire/reactjs-developers" target="_blank">Hire ReactJS Devs</a></li>
-                    <li><a href="https://hng.tech/hire/web3-developers" target="_blank">Web3 Devs Hiring</a></li>
-                    <li><a href="https://www.startupjobs.com" target="_blank">Startup Jobs Board</a></li>
-                    <li><a href="https://hng.tech/hire/mobile-developers" target="_blank">Hire Mobile Devs</a></li>
-                    <li><a href="https://hng.tech/hire/vuejs-developers" target="_blank">Vue.JS Jobs</a></li>
-                    <li><a href="https://hng.tech/hire/web-developers" target="_blank">Hire Web Devs</a></li>
-                    <li><a href="https://angel.co/jobs" target="_blank">AngelList Tech Jobs</a></li>
-                </ul>
+        <footer class="footer-content">
+            <div class="intern-goals">
+                <h2>HNG Internship Goals</h2>       
+                    <ul>
+                        <li>Master industry workflows</li>
+                        <li>Build 5+ portfolio projects</li>
+                        <li>Develop teamwork skills</li>
+                        <li>Receive expert code reviews</li>
+                    </ul>
             </div>
 
-            <div class="reference-section">
-                <h2>References</h2>
-                <div class="reference-lists">
-                    <ul>
-                        <li><h3>Frontend Technologies</h3></li>
-                        <li><a href="https://reactjs.org" target="_blank">React Official Documentation</a></li>
-                        <li><a href="https://vuejs.org" target="_blank">Vue.js Guide</a></li>
-                        <li><a href="https://developer.mozilla.org" target="_blank">MDN Web Docs</a></li>
-                    </ul>
-                    <ul>
-                        <li><h3>Backend Resources</h3></li>
-                        <li><a href="https://nodejs.org" target="_blank">Node.js Documentation</a></li>
-                        <li><a href="https://expressjs.com" target="_blank">Express Framework</a></li>
-                        <li><a href="https://www.postgresql.org" target="_blank">PostgreSQL Guides</a></li>
-                    </ul>
-                    <ul>
-                        <li><h3>DevOps Tools</h3></li>
-                        <li><a href="https://docker.com" target="_blank">Docker Documentation</a></li>
-                        <li><a href="https://kubernetes.io" target="_blank">Kubernetes Handbook</a></li>
-                        <li><a href="https://aws.amazon.com" target="_blank">AWS Developer Center</a></li>
-                    </ul>
-                    <ul>
-                        <li><h3>Design Systems</h3></li>
-                        <li><a href="https://material.io" target="_blank">Material Design</a></li>
-                        <li><a href="https://storybook.js.org" target="_blank">Storybook Tutorials</a></li>
-                        <li><a href="https://figma.com" target="_blank">Figma Design Resources</a></li>
-                    </ul>
-                </div>
+            <div class="footer-links">
+                <a href="https://hng.tech/hire/web-developers" target="_blank">Hire Web Developers</a> <span class="hide">|</span> 
+                <a href="https://hng.tech/hire/reactjs-developers" target="_blank">Hire React.js Developers</a>
+                <span class="hng-link">
+                    <a href="https://hng.tech" target="_blank">Visit HNG Tech</a>
+                </span>
             </div>
-        </aside>
+        </footer>
     </div>
 </body>
 </html>
